--- a/EmacsMate.org
+++ b/EmacsMate.org
@@ -13,7 +13,8 @@ project management tools for emacs:
 - [[http://stackoverflow.com/questions/978984/is-there-a-good-emacs-project-management-somewhere][Is there a good Emacs project management somewhere? ]]
 - [[http://misspent.wordpress.com/2011/05/31/eproject-anything-simple-emacs-project-management/][eproject + anything: simple emacs project management]].
 
-I haven't put project management into effect yet.
+I have implemented projectile support because it has some support for
+version control-based projects.
 * Key Bindings
 Typically TextMate uses [[http://www.emacswiki.org/CuaMode][Cua Mode]].  This does not provide all the
 traditional key bindings, so I also use [[http://ergoemacs.org/emacs/ergonomic_emacs_keybinding.html][ErgoEmacs Keybindings]]. This
@@ -163,6 +164,7 @@ This is based on my changing [[http://eschulte.me/emacs24-starter-kit/][Emacs St
       expand-region
       dired+
       linum-off
+      projectile
       tabbar-ruler)
     "Libraries that should be installed by default.")
   
@@ -1050,7 +1052,7 @@ Turn on save history to save history between sessions.
 #+BEGIN_SRC emacs-lisp
   (savehist-mode 1)
 #+END_SRC
-*** Tabbar/Ruler
+*** Tabbar/Ruler & Project Management
 Setup global tabbar and ruler.
 #+BEGIN_SRC emacs-lisp
   (setq tabbar-ruler-global-tabbar 't) ; If you want tabbar
@@ -1061,7 +1063,32 @@ Setup global tabbar and ruler.
     (require 'tabbar-ruler))
   
 #+END_SRC
+Also set it up to be used with projectile.
 
+#+BEGIN_SRC emacs-lisp
+  (projectile-global-mode 1)
+  
+  (defun ergoemacs-tabbar-buffer-groups ()
+    "Return the list of group names BUFFER belongs to.
+      Return only one group for each buffer."
+    (cond
+     ((or (get-buffer-process (current-buffer)) (memq major-mode '(comint-mode compilation-mode))) '("Term"))
+     ((string-equal "*" (substring (buffer-name) 0 1)) '("Misc"))
+     ((condition-case err
+          (projectile-project-root)
+        (error nil)) (list (projectile-project-name)))
+     ((memq major-mode '(emacs-lisp-mode python-mode emacs-lisp-mode c-mode c++-mode makefile-mode lua-mode vala-mode)) '("Coding"))
+     ((memq major-mode '(javascript-mode js-mode nxhtml-mode html-mode css-mode)) '("HTML"))
+     ((memq major-mode '(org-mode calendar-mode diary-mode)) '("Org"))
+     ((memq major-mode '(dired-mode)) '("Dir"))
+     (t '("Main"))))
+  
+  (setq tabbar-buffer-groups-function 'ergoemacs-tabbar-buffer-groups)
+#+END_SRC
+
+     
+     
+     
 *** Cosmetics
 
 #+begin_src emacs-lisp
